WebAPP/References/smartadmin/css/osy.css
/* ... */
    .sortable-item{
        color:var(--main-color)!important;
        border: 1px solid #d9d9d9!important;
        border-radius: 0px!important;
        margin-bottom: 5px!important;
    }

    
    nav ul ul li{
        padding-bottom: 4px!important;
        padding-top: 4px!important;
    }

    .badge-sm{
        min-width: 28px!important;
        padding: 2px 4px!important;
        line-height: 0.8!important;
        border-radius: 5px!important;
        font-size: 9px!important;
        z-index: 1!important;
    }

    .minified nav>ul>li>ul{
        width:350px!important;
    }

    .SmallBox .textoFull {
        width: 89%!important;
    }



        .osy-unitRuleSort {
            list-style-type: 'horizontal';
            margin: 2px;
            padding: 5px;
            width: 200px;
            border: lightblue solid 1px;
        }
        .osy-unitRuleSort-container{
            float: left;
            width: 220px;
        }
        .osy-unitRuleSort-container span {
            font-weight: bold;
        }
        .osy-unitRuleSort div {
            border-radius: 5px;
            padding: 5px;
            background-color: white;
            color: black;
            cursor: pointer;
            border: 1px solid transparent;
         }
         .osy-unitRuleSort div:hover {
            border: 1px solid #356AA0;
          }

/*loader*/
.loader {
    border: 14px solid var(--main-color); /* Light grey */
    border-top: 14px solid var(--second-darker-color) !important; /* Blue */
    border-radius: 50% !important;
    width: 100px;
    height: 100px;
    animation: spin 2s linear infinite;
    position:fixed;
    top:33%;
    left:45%;
    z-index: 999999!important;
}

#loadermain h4 {
    width: 220px;
    height: 120px;
    position:fixed;
    top:45%;
    left:42%;
    text-align: center;
    z-index: 999999!important;
}

#loadermain{
    background-color:#fff;
    width:100%;
    height:100%;
    opacity:0.7;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 99999!important;
}

/*loaderLink*/
.loaderLink {
    border: 16px solid #ccc; /* Light grey */
    border-top: 16px solid var(--main-color) !important;/* Blue */
    border-radius: 50% !important;
    width: 40px;
    height: 40px;
    animation: spin 2s linear infinite;
    position:absolute;
    top:20%;
    left:45%;
    z-index: 5001;
}

.loadermainLink{
    background-color:#fff;
    width:100%;
    height:100%;
    opacity:0.7;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 5000;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@keyframes pulse {
    0% {
          transform: scale(.5);
          background-color: var(--main-color);
          border-radius: 100%;
      }

      50% {
          background-color:var(--second-color)
      }

      100% {
          transform: scale(2.0);
          background-color: var(--second-darker-color);
      }
}

.gridTooltip{
    width: 100%; 
    height: 100%;
  }

  #main {
   padding-bottom: 15px!important;
}

/*left menu*/
/* #header>:first-child, aside {
    width: 320px;
}

#main {
    margin-left: 320px;
}
.hidden-menu #main{
    margin-left: 0px;
}

@media only screen and (min-width: 320px) and (max-width: 479px){
    #left-panel {
        left: -320px!important;
    }
}

@media only screen and (min-width: 0) and (max-width: 679px){
    #left-panel {
        left: -320px;
    }
}

@media (max-width: 767px){
    #left-panel {
        left: -320px;
    }
} */

.smart-style-4:not(.minified) nav ul ul li>a {
    padding-left: 28px;
}
nav ul li ul li>a {
    font-size: 12px!important;
}

svg[id^="mermaid-"] { 
    min-width: 500px!important; 
    width: 1800px!important;
    max-width: 2200px!important; 
}



.alert-osy-second-color {
    border-color: var(--second-color);
    border-width: 2px;
    color: var(--second-color);
}

.alert-success-osy {
    border-color: #3c763d;
    border-width: 2px;
    color: #3c763d;
}

.alert-danger-osy {
    border-color: #d9534f;
    border-width: 2px;
    color: #d9534f;
}
.alert-info-osy {
    border-color: #5bc0de;
    border-width: 2px;
    color: #5bc0de;
}

.alert-warning-osy {
    border-color: #f0ad4e;
    border-width: 2px;
    color: #f0ad4e;
}

.log-output{
    height: 740px; 
    overflow: auto;
}



.vertical-align {
    display: flex;
    align-items: center;
}



.dropdown-header {
    display: block;
    padding: 3px 20px;
    font-size: 12px;
    line-height: 1.42857143;
    color: #999;
    white-space: nowrap;
}
*, :after, :before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

li {
    display: list-item;
    text-align: -webkit-match-parent;
}
.dropdown-menu {
    min-width: 320px!important;
    z-index: 10000!important;
    padding: 20px!important;
}

.dropdown-menu li{
    padding: 0px !important;
    display: list-item!important;
    text-align: -webkit-match-parent!important;
}

.dropdown-menu li>a{
    line-height: 1 !important;
}

.dropdown-menu li>a:hover{
  background-color: var(--second-color)!important;
}

.dropdown-menu-wide{
    min-width: 720px!important;
    z-index: 9000!important;
    padding: 20px!important;
    /* padding-top: 15px!important; */
}

.dropdown-menu-extra-wide{
    min-width: 1520px!important;
    z-index: 9000!important;
    padding: 20px!important;
    /* padding-top: 15px!important; */
}

.dropdown-header{
    border-bottom: 2px solid var(--second-color); 
    margin-bottom: 20px;
}

.project-context-res {
    display: inline-block;
    padding: 0px 13px 0;
    position: relative;
}

.darkGrey{
    color: var(main-darker-color)!important;
}


.wj-content {
    display: inline-block;
    /* border: 1px solid  rgba(0,0,0,.2); */
    border: 1px solid  var(main-darker-color);
    border-radius: 0px!important; 
    /* overflow: hidden; */
}
/* ... */

